{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 84,
  "lineage": "eedb5b64-4ae4-e930-e505-91629349fe55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08df646e18b182346",
            "arn": "arn:aws:ec2:ap-south-1:052061212551:instance/i-0d0dafe0efc2a53cb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0dafe0efc2a53cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00eca4f05db2510b6",
            "private_dns": "ip-12-0-1-24.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.1.24",
            "public_ip": "3.110.127.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3c7fede93388a03",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f3f14eb31c0a4f3b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d04df83d93d623f2",
            "tags": {
              "Name": "tf_instance"
            },
            "tags_all": {
              "Name": "tf_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3f14eb31c0a4f3b"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.tf_sg",
            "aws_subnet.tf-subnet",
            "aws_vpc.TF_VPC",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:052061212551:internet-gateway/igw-045e2383cd20172eb",
            "id": "igw-045e2383cd20172eb",
            "owner_id": "052061212551",
            "tags": {
              "Name": "tf_ig"
            },
            "tags_all": {
              "Name": "tf_ig"
            },
            "vpc_id": "vpc-037707701f25f060d"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:052061212551:route-table/rtb-0780d3cd6ef1d1859",
            "id": "rtb-0780d3cd6ef1d1859",
            "owner_id": "052061212551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045e2383cd20172eb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_route"
            },
            "tags_all": {
              "Name": "tf_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-037707701f25f060d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_ig",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "connect_route_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0870fd8877c267c9e",
            "route_table_id": "rtb-0780d3cd6ef1d1859",
            "subnet_id": "subnet-0d04df83d93d623f2"
          },
          "dependencies": [
            "aws_internet_gateway.tf_ig",
            "aws_route_table.tf_route",
            "aws_subnet.tf-subnet",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:052061212551:security-group/sg-0f3f14eb31c0a4f3b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3f14eb31c0a4f3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_sg",
            "name_prefix": "",
            "owner_id": "052061212551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_sg"
            },
            "tags_all": {
              "Name": "tf_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-037707701f25f060d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:052061212551:subnet/subnet-0d04df83d93d623f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04df83d93d623f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052061212551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_1"
            },
            "tags_all": {
              "Name": "tf_subnet_1"
            },
            "vpc_id": "vpc-037707701f25f060d"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:052061212551:subnet/subnet-03d94aff26835cc76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d94aff26835cc76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052061212551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_2"
            },
            "tags_all": {
              "Name": "tf_subnet_2"
            },
            "vpc_id": "vpc-037707701f25f060d"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:052061212551:vpc/vpc-037707701f25f060d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0236e57b9142ec5c4",
            "default_route_table_id": "rtb-0b602347256a469dc",
            "default_security_group_id": "sg-03c9973f4303d00e4",
            "dhcp_options_id": "dopt-0becd81bf8cf2faf7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-037707701f25f060d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b602347256a469dc",
            "owner_id": "052061212551",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}